--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Flipcart</title>
+    <title>Flipkart</title>
     <link rel="stylesheet" href="Css/style.css">
     <link rel="stylesheet" href="Css/utility.css">
     <link rel="stylesheet" href="Css/responsive.css">
